Update Требования на собесах.md

--- a/Собеседования/Требования на собесах.md
+++ b/Собеседования/Требования на собесах.md
@@ -1,4 +1,6 @@
-# Проблема собеседований на позиции DevOps
+# Требования на собесах
+
+## Проблема собеседований на позиции DevOps
 Задача собеседования — понять, как будет справляться с задачами кандидат.
 
 В собеседованиях по разработке всё проще: можно просто провести live coding и увидеть, как человек работает. Но в интервью по DevOps много теории, и в итоге часто неясно, есть ли у человека реальный опыт выполнения какой-то задачи или он просто вспоминает обрывки когда-то прочитанных материалов. 
@@ -7,7 +9,7 @@
         
 В итоге в собеседованиях было много воды. Мы задавали вопросы вроде: «Ну вот что бы ты сделал, если …» Понимание о компетентности и уровне кандидата на должность мы получали лишь примерное.
 
-# Как нашли решение и как изменилось качество интервью
+## Как нашли решение и как изменилось качество интервью
 
 У нас есть своя школа разработки Metaclass KTS. Дважды в год мы проводим курсы по фронтенду и бэкенду и ещё есть несколько нерегулярных — в том числе курс для разработчиков «Деплой приложений в Kubernetes». 
 
