Update Требования на собесах.md

--- a/Собеседования/Требования на собесах.md
+++ b/Собеседования/Требования на собесах.md
@@ -1,3 +1,5 @@
+[Главная][1]
+
 # Требования на собесах
 
 ## Проблема собеседований на позиции DevOps
@@ -38,3 +40,7 @@
 Если кандидат справляется с задачей быстро, добавляем задание посложнее: например, настроить мониторинг, чтобы мы увидели дашборд с нашим развёрнутым приложением.
 
 После такого интервью мы сразу понимаем, подходит ли нам человек.
+
+[Главная][1]
+
+[1]: https://skillbox.ru/media
