Update Требования на собесах.md

--- a/Собеседования/Требования на собесах.md
+++ b/Собеседования/Требования на собесах.md
@@ -41,6 +41,8 @@
 
 После такого интервью мы сразу понимаем, подходит ли нам человек.
 
+[Ссылка на оригинал](https://habr.com/ru/amp/publications/795277/)
+
 [Главная][1]
 
 [1]: /knowledge-base/
