Update Требования на собесах.md

--- a/Собеседования/Требования на собесах.md
+++ b/Собеседования/Требования на собесах.md
@@ -1,4 +1,4 @@
-[Главная][1]
+### [Главная][1]
 
 # Требования на собесах
 
@@ -43,6 +43,6 @@
 
 [Ссылка на оригинал](https://habr.com/ru/amp/publications/795277/)
 
-[Главная][1]
+### [Главная][1]
 
 [1]: /knowledge-base/
