--- a/Собеседования/Требования на собесах.md
+++ b/Собеседования/Требования на собесах.md
@@ -41,7 +41,7 @@
 
 После такого интервью мы сразу понимаем, подходит ли нам человек.
 
-[Ссылка на оригинал](https://habr.com/ru/amp/publications/795277/)
+[Оригинал статьи](https://habr.com/ru/amp/publications/795277/)
 
 ### [Главная][1]
 
