add ufw, apache+nginx

--- a/Ansible/Основа.md
+++ b/Ansible/Основа.md
@@ -11,3 +11,44 @@ fatal: [localhost]: UNREACHABLE! => {"changed": false, "msg": "Failed to connect
 ```
 localhost ansible_connection=local
 ```
+
+## Ошибка MySQL
+
+```
+fatal: [server1]: FAILED! =&gt; {"changed": false, "msg": "A MySQL module is required: for Python 2.7 either PyMySQL, or MySQL-python, or for Python 3.X mysqlclient or PyMySQL. Consider setting ansible_python_interpreter to use the intended Python version."}
+```
+
+Чтобы решить эту проблему, нужно включить установку библиотеки `pymysql` непосредственно в код Ansible непосредственно перед выполнением операций с базой данных:
+
+```yml
+- name: Install pymysql
+  pip:
+    name: pymysql
+    executable: pip3
+```
+
+Ansible работает в собственной виртуальной среде Python, включая собственный набор библиотек, что иногда может приводить к проблемам, связанным с библиотеками.
+
+## Установка Python и pip
+
+```yml
+---
+- name: Install pip on Amazon Linux
+  hosts: your-instance-public-ip
+  become: true
+  tasks:
+    - name: Update package cache
+      yum:
+        name: '*'
+        state: latest
+      become: true
+
+    - name: Install Python and pip
+      yum:
+        name: "{{ item }}"
+        state: present
+      become: true
+      loop:
+        - python3
+        - python3-pip
+```
