--- a/Ansible/Основа.md
+++ b/Ansible/Основа.md
@@ -29,6 +29,24 @@ fatal: [server1]: FAILED! =&gt; {"changed": false, "msg": "A MySQL module is req
 
 Ansible работает в собственной виртуальной среде Python, включая собственный набор библиотек, что иногда может приводить к проблемам, связанным с библиотеками.
 
+## Ошибка /etc/my.cnf
+
+```bash
+error: Found option without preceding group in config file: /etc/my.cnf at line: 1
+Fatal error in defaults handling. Program aborted
+```
+
+Добавить в role-файл MySQL:
+
+```yml
+- name: Add [mysql] section to my.cnf
+  lineinfile:
+    path: /etc/mysql/my.cnf
+    line: '[mysql]'
+    insertafter: BOF
+    state: present
+```
+
 ## Установка Python и pip
 
 ```yml
